# boilerplate-c_cpp-cmake-ninja-make

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package-lock.json  package.json
configs/CMake/: tasks.json
configs/commitlint/: commitlint.config.js
src/: CMakeLists.txt  Makefile.mk  helloworld_cpp.cpp  main.c
src/math_lib/: CMakelists.txt  Makefile.mk  math_utils.c  math_utils.h
